--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bankdatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/database2
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.show-sql=true
