test with frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 server.port=8083
+
+# keycloak.realm = demoreact
+#keycloak.auth-server-url = http://localhost:8080/auth
+#keycloak.resource = mybankapp
+#keycloak.bearer-only=true
+#keycloak.public-client=true
